--- a/css/style.css
+++ b/css/style.css
@@ -8620,14 +8620,17 @@ margin-right:100px;
   justify-content:center ;
   align-items:center;
   margin-top:-35px ;
+
 }
 #akcijskiDiv p{
   display:flex;
   justify-content:center ;
   align-items:center;
   text-align:center ;
-  border:1px solid #eec60a;
+  border:1px solid black;
   border-radius:5px;
-  color:black;
-  background-color:white;
+  color:white;
+  background-color:black;
+  padding-left: 5px;
+  padding-right: 5px;
 }
